<resources>
    <string name="app_name">XimbaliApp</string>
    <string name="Estado1">Quintana Roo</string>
    <string name="Estado2">Campeche</string>
    <string name="Estado3">Veracruz</string>
    <string name="Estado4">Michoacán</string>
    <string name="Estado5">Sinaloa</string>
    <string name="Estado6">México</string>
    <string name="EstadoSelect">SELECCIONE UN ESTADO:</string>
    <string name="LtQroo">LUGARES TURISTICOS DE QUINTANA ROO</string>
    <string name="LtCam">LUGARES TURISTICOS DE CAMPECHE</string>
    <string name="LtVer">LUGARES TURISTICOS DE VERACRUZ</string>
    <string name="LtMich">LUGARES TURISTICOS DE MICHOACÁN</string>
    <string name="LtSin">LUGARES TURISTICOS DE SINALOA</string>
    <string name="LtMex">LUGARES TURISTICOS DE MÉXICO</string>
    <string name="LugarTuristicoQroo1">Zona Arqueológica</string>
    <string name="LugarTuristicoQroo2">Parque Xcaret</string>
    <string name="LugarTuristicoQroo3">Cenote Dos Ojos</string>
    <string name="LugarTuristicoQroo4">Museo TravelArt</string>
    <string name="LugarTuristicoQroo5">Reserva de la Biósfera</string>
    <string name="LugarTuristicoQroo6">Playa Norte</string>
    <string name="LugarTuristicoCam1">Museo Arqueológico</string>
    <string name="LugarTuristicoCam2">Puerta de Tierra</string>
    <string name="LugarTuristicoCam3">Malecón</string>
    <string name="LugarTuristicoCam4">Moch Couoh-Parque</string>
    <string name="LugarTuristicoCam5">Novia del Mar</string>
    <string name="LugarTuristicoCam6">Barco Lorencillo</string>
    <string name="LugarTuristicoVer1">Acuario</string>
    <string name="LugarTuristicoVer2">Museo Naval México</string>
    <string name="LugarTuristicoVer3">Museo de Cera</string>
    <string name="LugarTuristicoVer4">Aquatico Inbursa</string>
    <string name="LugarTuristicoVer5">San Juan de Ulúa</string>
    <string name="LugarTuristicoVer6">Isla de Sacrificios</string>
    <string name="LugarTuristicoMich1">Paricutín</string>
    <string name="LugarTuristicoMich2">Lago de Pátzcuaro</string>
    <string name="LugarTuristicoMich3">Catedral de Morelia</string>
    <string name="LugarTuristicoMich4">Parque Nacional</string>
    <string name="LugarTuristicoMich5">Lago de Camécuaro</string>
    <string name="LugarTuristicoMich6">Lago de Zirahuén</string>
    <string name="LugarTuristicoSin1">Acuario Mazatlan</string>
    <string name="LugarTuristicoSin2">Jardín Botánico</string>
    <string name="LugarTuristicoSin3">Playa Las Brujas</string>
    <string name="LugarTuristicoSin4">Las Labradas </string>
    <string name="LugarTuristicoSin5">Plaza Machado</string>
    <string name="LugarTuristicoSin6">Catedral</string>
    <string name="LugarTuristicoMex1">Palacio de Bellas Artes</string>
    <string name="LugarTuristicoMex2">Bosque de Chapultepec</string>
    <string name="LugarTuristicoMex3">Museo Nacional</string>
    <string name="LugarTuristicoMex4">Ángel de la Independencia</string>
    <string name="LugarTuristicoMex5">Pirámide del Sol</string>
    <string name="LugarTuristicoMex6">Desierto de los Leones</string>
    <string name="TextoLugarQroo1">Tulum fue una ciudad amurallada de la cultura maya ubicada en el Estado de Quintana Roo, en el sureste de México, en la costa del mar Caribe. Es en la actualidad un gran atractivo turístico de la Riviera Maya y junto a ella se encuentra la moderna población del mismo nombre, Tulum. La ciudad maya se encuentra dentro del denominado Parque Nacional Tulum</string>
    <string name="TextoLugarQroo2">Xcaret es un parque acuático, temático, de diversiones, eco-arqueológico y más, en un solo lugar. Por su ubicación privilegiada en la selva maya entre ríos subterráneos, cenotes y frente al imponente mar Caribe, tiene impresionantes escenarios, los cuáles puedes disfrutar en diferentes actividades que aprovecha al máximo cada uno de ellos. Además de la asombrosa naturaleza, Xcaret es un parque temático en Cancún y Rivera Maya que celebra el presente y la rica historia del pasado de México, un país reconocido por sus tradiciones y cultura.</string>
    <string name="TextoLugarQroo3">Cenote Dos Ojos es un sistema de cuevas inundadas, cuenta con una profundidad de 17 metros y es considerado uno de los cenotes con las cavernas subterráneas más largas. Su agua es color azul turquesa, en donde habita una gran cantidad de sorprendente fauna marina, rodeado por milenarias estalactitas y estalagmitas.</string>
    <string name="TextoLugarQroo4">El Museo Subacuático de Arte o MUSA es un museo ubicado bajo las aguas del mar Caribe mexicano, en las aguas que rodean Cancún, Isla Mujeres y Punta Nizuc.</string>
    <string name="TextoLugarQroo5">La Reserva de la Biósfera de Sian Ka an es un espacio natural protegido que se localiza en la costa caribeña del estado de Quintana Roo, México. Fue declarada Patrimonio de la Humanidad por la Unesco en el año 1987 y sitio Ramsar en 2003. ​</string>
    <string name="TextoLugarQroo6">Playa Norte es famosa por sus aguas tranquilas y cristalinas, que dan la sensación de estar en una inmensa piscina azul. Es una playa pública con una extensión de casi 1.000 metros y de arena blanca. Las aguas son de poca profundidad y puedes adentrarte hasta 200 metros sin que sobrepase tu cintura.</string>
    <string name="TextoLugarCam1">El Museo Arqueológico de Campeche fue abierto al público en 1986.  Este museo se ubica en el fuerte de San Miguel, una construcción de características militares construida en el siglo XVIII y que formara parte del sistema defensivo fortificado de Campeche, una de las mejores defensas de América Latina en el tiempo de la Colonia. Su misión es difundir la riqueza arqueológica de los mayas antiguos a través de 10 salas que albergan dos colecciones únicas en toda el área maya, una consiste en las máscaras de jadeíta procedentes de las tumbas de los Señores de Calakmul y la colección de figurillas funerarias de la isla de Jaina.</string>
    <string name="TextoLugarCam2">Puerto de Tierra Campeche, es una construcción militar que permitía defender el acceso por tierra a la ciudad desde cualquier ángulo. El muro está delimitado por un foso y cuenta con troneras desde las que se disparaban armas de fuego.
Ofrece un espectáculo de luz y sonido llamado “El lugar del sol” donde al espectador se le traslada a la época colonial en la que los campechanos luchaban y se defendían de los ataques piratas.</string>
    <string name="TextoLugarCam3">Uno de los principales atractivos de la ciudad de Campeche es sin duda el Malecón, pues se trata de un lugar sumamente pacífico en el que se puede realizar diferentes actividades, desde una amena conversación en una de las bancas mientras observa el atardecer, hasta un recorrido en bicicleta a lo largo de toda su extensión.
El malecón comienza desde el monumento a Justo Sierra y finaliza en la avenida Joaquín Musel. Durante todo este tramo le ofrece, tres pistas en las que se puede patinar, andar en bici, caminar, trotar y correr; además para su mayor seguridad le ofrece pasos peatonales que le permitirán ir de un extremo a otro sin mayor peligro</string>
    <string name="TextoLugarCam4">Hoy, el Parque Moch Couoh abarca una superficie de 31 mil 536 metros cuadrados. En esta enormidad sobresalen los mosaicos decorativos del antiguo parque, obra del artista José Chávez Morado, los cuales fueron remodelados.
También podrás ver hermosos espejos artificiales de agua con cascadas; pasea tranquilamente por sus andadores y senderos elevados recubiertos con cantera natural de la región y admira el bello atardecer desde su interior.</string>
    <string name="TextoLugarCam5">Hace muchos años había una hermosa mujer que vivía en la ciudad de Campeche. Ella solía pasear por la costa para contemplar las enormes embarcaciones provenientes de diversas partes del mundo. Le gustaba imaginar cómo eran aquellos países desde donde venían tan exóticas y variadas mercancías.
La belleza de aquella joven era tal que hasta el mar quedó cautivado y deseaba tener su atención por siempre. Por ello, procuraba robarle sonrisas con suaves y armoniosos oleajes que reflejaban los destellos dorados del sol. Por las tardes, el mar se pintaba de naranja mientras el astro rey se hundía en sus aguas. Aquel era espectáculo que estremecía de emoción a la doncella.</string>
    <string name="TextoLugarCam6">Recorrer la bahía de Campeche a bordo del Barco Pirata Lorencillo será una experiencia única en la que retrocederás en el tiempo a aquella época en donde la ciudad fue atacada por verdaderos piratas. Sumérgete en este encuentro con el pasado y disfruta de una excelente cena con platillos tradicionales como el pan de cazón mientras observas los hermosos contrastes del cielo y el mar campechano rodeado de piratas contemporáneos</string>
    <string name="TextoLugarVer1">Uno de los acuarios más completos y de más moderna tecnología en América Latina, cuyos objetivos son fomentar la educación, el turismo, el entendimiento ecológico, ampliar la investigación acuática y ofrecer un lugar recreativo para la familia.
Ubicado en el Playón de Hornos, el Acuario de Veracruz ocupa una superficie de 3493 m2 y está compuesto en un 80% de ambiente natural y sólo un 20% artificial. Asimismo, consta de siete secciones de las cuales la primera es el vestíbulo en el que destacan las fuentes danzarinas, donde inquietos chorros de agua cristalina suben y bajan al ritmo de conocidas melodías nacionales e internacionales.</string>
    <string name="TextoLugarVer2">El Museo Naval de Veracruz es un espacio que no te puedes perder si quieres conocer un poco más sobre la historia de México y de este puerto
El Museo Naval de Veracruz tiene como finalidad exhibir, conservar y preservar los bienes culturales de la Armada de México y distintos hechos marítimos internacionales en los que estuvo México involucrado.
Las primeras salas narran los inicios de la navegación, desde la era prehispánica, la llegada de los españoles y cómo se orientaban en el mar siguiendo las estrellas; hasta hay una réplica a escala de la Nao de China.</string>
    <string name="TextoLugarVer3">El Museo de Cera de Veracruz es uno de los sitios que te recomendamos visitar, se encuentra situado en la Plaza Acuario en el Boulevard Manuel Ávila Camacho, justo aun costado del Acuario de Veracruz.
El Museo de Cera se inauguró el 27 de noviembre de 2002, por el Gobernador Miguel Alemán Velasco, y desde entonces es uno de los lugares favoritos del turismo.
Ésta fascinante lugar cuenta con 14 salas en dónde podrás admirar 120 figuras de cera que van desde cantantes, actores, deportistas, personajes religiosos y políticos. además de  veracruzanos distinguidos.</string>
    <string name="TextoLugarVer4">Las atracciones del aquatico Inbursa son 10, y todas cuentan con ciertos horarios, por lo que no estarán abiertas al mismo tiempo, sino que, durante el transcurso del día las estarán activando, por lo que deberás estar atento de las atracciones para ver si ya las abrieron.El costo de entrada al parque acuático va a depender de si es temporada vacacional o no, y de la estatura de los niños que te acompañen</string>
    <string name="TextoLugarVer5">pequeña isla de México en la que se ubica la antigua fortaleza y el otrora puerto (también del mismo nombre). La construcción de la fortaleza fue planeada por los españoles al mando de Hernán Cortés el 22 de abril de 1519 en el contexto de la conquista de América y de los ataques piratas y corsarios de la época contra España. La fortaleza está construida en el estilo llamado traza italiana</string>
</resources>